# patronet-openenv

./: .gitignore  Dockerfile  README.md  client.py  models.py  openenv.yaml  pyproject.toml
data/: ontology.json  triage.json
patronet/: __init__.py  app.py  client.py  env.py  environment.py  models.py  rubric.py  train.py
server/: Dockerfile  app.py
tests/: test_env.py  test_http.py
